--- a/ComputerApp/src/main/webapp/resources/css/main.css
+++ b/ComputerApp/src/main/webapp/resources/css/main.css
@@ -33,5 +33,18 @@ td {
 
     padding: 0.5em 1em;
 }
+
+a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: red;
+}
  
 
